--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,9 @@
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "node_modules/@siemens/ngx-datatable/index.css",
+              "node_modules/@siemens/ngx-datatable/themes/material.scss",
+              "node_modules/@siemens/ngx-datatable/assets/icons.css",
               "src/styles.scss"
             ],
             "scripts": []
